Visible Only Classes

--- a/example.html
+++ b/example.html
@@ -13,7 +13,7 @@
 			<div class="col-md-4 col-sm-5 col-xs-4" " style="background : yellow;">
 				<h1>Hola</h1>
 			</div>
-			<div class="col-md-4 col-sm-5 col-xs-4" " style="background : blue;">
+			<div class="col-md-4 visible-only-mobile" style="background : blue;">
 				<h1>Hola</h1>
 			</div>
 		</div>
